--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>测试</title>
     <base target="_blank">
     <link rel="alternate" hreflang="en-US" href="index.html">
+    <link rel="stylesheet" href="styles/style.css">
+    <!--<link rel="stylesheet" href="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-y/font-awesome/6.0.0/css/fontawesome.min.css" integrity="sha512-8Vtie9oRR62i7vkmVUISvuwOeipGv8Jd+Sur/ORKDD5JiLgTGeBSkI3ISOhc730VGvA5VVQPwKIKlmi+zMZ71w==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-y/font-awesome/6.0.0/css/brands.min.css" integrity="sha512-bSncow0ApIhONbz+pNI52n0trz5fMWbgteHsonaPk42JbunIeM9ee+zTYAUP1eLPky5wP0XZ7MSLAPxKkwnlzw==" crossorigin="anonymous" referrerpolicy="no-referrer">-->
     <link rel="icon" href="images/1.png">
     <link rel="apple-touch-icon" href="images/1.png">
     <script>
