--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                 </div>
                 <a id="donate" class="subtitle" href="#donate" target="_self">捐赠</a>
                 <div class="list">
-                    <a id="alipay" class="list-item img-link" href="images/money1.png" rel="noopener">支付宝</a> 
-                    <a class="list-item img-link" href="images/money2.png" rel="noopener">微信支付</a>
+                    <a id="alipay" class="list-item img-link" href="" rel="noopener">支付宝</a> 
+                    <a class="list-item img-link" href="" rel="noopener">微信支付</a>
                 </div>
                 <a id="links" class="subtitle" href="#links" target="_self">友情链接</a>
                 <div class="list">
