--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <legend>主要项目</legend>
                         <a class="list-item" href="" rel="noopener">
                             绘事日记
-                            <div class="description">练习项目，居然是唯一能拿得出手的</div>
+                            <div class="description">练习项目，居然是唯一凑合的</div>
                         </a>
                         <a class="list-item" href="" rel="noopener">
                             学生下课时间调整对就餐压力的影响研究
