--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
                 <a id="links" class="subtitle" href="#links" target="_self">友情链接</a>
                 <div class="list">
-                    <a class="list-item" href="" rel="noopener">暂定</a> 
+                    <a class="list-item" href="https://bilibili.com" rel="noopener">哔哩哔哩（测试中，别点）</a> 
                     <a class="list-item" href="" rel="noopener">暂定</a> 
                     <a class="list-item" href="" rel="noopener">暂定</a>
                 </div>
