--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <legend>主要项目</legend>
                         <a class="list-item" href="" rel="noopener">
                             绘事日记
-                            <div class="description">练习项目，居然是唯一凑合的</div>
+                            <div class="description">练习项目，居然是唯一能凑合的</div>
                         </a>
                         <a class="list-item" href="" rel="noopener">
                             学生下课时间调整对就餐压力的影响研究
@@ -60,10 +60,9 @@
                         </a>
                     </fieldset>
                     <fieldset>
-                        <legend>小游戏</legend>
-                        <a class="list-item" href="" rel="noopener">暂定</a>
-                        <a class="list-item" href="" rel="noopener">暂定</a>
-                        <a class="list-item" href="" rel="noopener">暂定</a>
+                        <legend>小作品</legend>
+                        <a class="list-item" href="http://0hcbyo.epub360.cn/v2/manage/book/krx23n/" rel="noopener">微信H5--师大相册</a>
+                        <a class="list-item" href="http://0hcbyo.epub360.cn/v2/manage/book/crykib/" rel="noopener">微信H5--师大头像框</a>
                     </fieldset>
                     <fieldset>
                         <legend>暂定</legend>
@@ -86,7 +85,6 @@
                 <a id="links" class="subtitle" href="#links" target="_self">友情链接</a>
                 <div class="list">
                     <a class="list-item" href="https://bilibili.com" rel="noopener">哔哩哔哩（测试中，别点）</a> 
-                    <a class="list-item" href="" rel="noopener">暂定</a> 
                     <a class="list-item" href="" rel="noopener">暂定</a>
                 </div>
                 <footer>
