--- a/index.html
+++ b/index.html
@@ -93,6 +93,6 @@
                 </footer>
             </div>
         </div>
-        <script src="scripts/main.js"></script>
+        <!--<script src="scripts/main.js"></script>-->
     </body>
 </html>
