--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                         </a>
                     </fieldset>
                     <fieldset>
-                        <legend>小作品</legend>
-                        <a class="list-item" href="http://0hcbyo.epub360.cn/v2/manage/book/krx23n/" rel="noopener">微信H5--师大相册</a>
-                        <a class="list-item" href="http://0hcbyo.epub360.cn/v2/manage/book/crykib/" rel="noopener">微信H5--师大头像框</a>
+                        <legend>微信H5</legend>
+                        <a class="list-item" href="http://0hcbyo.epub360.cn/v2/manage/book/krx23n/" rel="noopener">师大相册</a>
+                        <a class="list-item" href="http://0hcbyo.epub360.cn/v2/manage/book/crykib/" rel="noopener">师大头像框</a>
                     </fieldset>
                     <fieldset>
                         <legend>暂定</legend>
