--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <img class="avatar" src="images/head.jpg" alt="头像">
                     <h1>夕露</h1>
                     <p>现就读于家里蹲大学计算机系<br>
-                        <!--<a class="link" href="https://www.retiehe.com/" rel="noopener">热铁盒</a>-->尚未出世的某软件工程师</p>
+                       尚未出世的某软件工程师</p>
                     <a class="btn" href="https://github.com/fengdongfanqi">
                         <span class="fa-brands fa-github" aria-hidden="true"></span>
                         GitHub
