--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                         <a class="list-item" href="http://0hcbyo.epub360.cn/v2/manage/book/crykib/" rel="noopener">师大头像框</a>
                     </fieldset>
                     <fieldset>
-                        <legend>暂定</legend>
-                        <a class="list-item" href="" rel="noopener">暂定</a>
+                        <legend>文章分享</legend>
+                        <a class="list-item" href="" rel="noopener">在Github上创建个人网站（待写）</a>
                         <a class="list-item" href="" rel="noopener">暂定</a>
                         <a class="list-item" href="" rel="noopener">暂定</a>
                     </fieldset>
