--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </fieldset>
                     <fieldset>
                         <legend>文章分享</legend>
-                        <a class="list-item" href="" rel="noopener">在Github上创建个人网站（待写）</a>
+                        <a class="list-item" href="" rel="noopener">在Github上创建个人网站（待编辑）</a>
                         <a class="list-item" href="" rel="noopener">暂定</a>
                         <a class="list-item" href="" rel="noopener">暂定</a>
                     </fieldset>
