--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                     <a class="list-item" href="" rel="noopener">暂定</a>
                 </div>
                 <footer>
+                    <div>联系我：<a href="mailto:3112190048@qq.com?&subject=Hello!&body=Hello!">3112190048@qq.com</a></div>
                     <div>&copy; 2023 Qx</div>
                     <a href="https://beian.miit.gov.cn/" rel="noopener">ICP备******号</a>
                 </footer>
