--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="root" class="root">
             <main>
                 <div>
-                    <img class="avatar" src="images/head.jpg" alt="头像">
+                    <img class="avatar" src="images/head.png" alt="头像">
                     <h1>夕露</h1>
                     <p>现就读于家里蹲大学计算机系<br>
                        尚未出世的某软件工程师</p>
