--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <base target="_blank">
     <link rel="alternate" hreflang="en-US" href="index.html">
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="icon" href="images/1.ico">
-    <link rel="apple-touch-icon" href="images/1.ico">
+    <link rel="icon" href="images/favicon.ico">
+    <link rel="apple-touch-icon" href="images/favicon.ico">
     <script>
         var _hmt = _hmt || [];
         (function () {
